# chem169_llm_grader

./: .env.example  .gitignore  CLAUDE_CHECKPOINT.md  GRADING_WORKFLOW.md  QUICK_START.txt  README.md  README.md.save  SCALING_PLAN.md  index.html  late_submissions.md  mid_term_description_doc.md  pyproject.toml  requirements.txt  run_grader.bat  sync_instructions.sh  test_result.txt
communications/: template_critical_no_midterms.md  template_mia_no_submissions.md  template_needs_one_more_midterm.md  template_rejected_late_submission.md  template_unexcused_late_submission.md
docs/: index.html
examples/: expected_output.json  route.md  student_submission.ipynb
graderbot/: __init__.py  cli.py  dashboard.py  grader.py  llm_client.py  notebook_view.py  prompts.py  report.py  route_analysis.py  route_parser.py  schema.py  text_view.py  web.py
graderbot/static/: app.js  index.html  style.css
grades/: README.md  extra_credit.csv  midterm_completion.csv  penalty_feb23_under10_routes.csv  route_completion_summary.csv
reports/: student_status.md
results/: Mannam_Sricode.txt
scripts/: generate_grade_data.py  sync_and_grade.py
solutions/: code_TB_Data_explorer_5_7_Jinich(Solution).ipynb
submissions/: Mannam_Sricode_TB_Data_explorer_5_7_Jinich.ipynb
tests/: __init__.py  test_grader.py  test_notebook_view.py  test_route_parser.py  test_schema.py
